change to remote DB instead of sqllite !

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,11 @@
-DEBUG=FALSE
+APP_DEBUG=TRUE
+APP_ENV=local
 
 DISCORD_TOKEN =""
+COMMAND_PREFIX=!dev
+
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=python
+DB_USERNAME=
+DB_PASSWORD=
